# icfpc-2017

./: .gitignore  License.md  README.md  analyzer.pl  make-tarball.sh
deploy/: README  install  punter
maps/: _meta_maps.json  nara-scaled.json  oxford-3000-nodes.json  oxford-sparse.json
messages/: ehlo.json  move1.json  setup.json  splurge.json  stop.json
src-haskell/: Main.hs  Types.hs
src-haskell/server/: LICENSE  server.cabal  stack.yaml
src-haskell/server/app/: Main.hs
src-haskell/server/src/: Lib.hs  Types.hs
src-scala/: .gitignore  build.sbt
src-scala/project/: plugins.sbt
src-scala/src/main/resources/: logback.xml
src-scala/src/main/scala/org/codingteam/icfpc2017/: AppEntry.scala  Common.scala  CommonState.scala  ComponentConnectorStrategy.scala  DelegatingStrategy.scala  DumbObstructorStrategy.scala  DummyStrategy.scala  EagerStrategy.scala  ExecutionContexts.scala  FullState.scala  GameMap.scala  GraphMap.scala  GreedyStrategy.scala  HandlerLoop.scala  Logger.scala  Logging.scala  Messages.scala  MineOccupationStrategy.scala  MixedStrategy.scala  RandomConnectorStrategy.scala  RandomWalkerStrategy.scala  SerializationUtils.scala  Strategy.scala  StreamParser.scala  TcpInterface.scala  package.scala
src-scala/src/main/scala/org/codingteam/icfpc2017/futures/: Future.scala  RandomFutureGenerator.scala
src-scala/src/main/scala/org/codingteam/icfpc2017/onlinegamer/: OneBotOnServerGamer.scala  OnlineGamer.scala  RunLoopActor.scala
src-scala/src/main/scala/org/codingteam/icfpc2017/strategy/: AntiheroStrategy.scala  (+10 more)
visualizer/: index.html  js-core.js  puntfx.css  puntfx.js
