name:                server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Minoru/server#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Batischev
maintainer:          eual.jp@gmail.com
copyright:           2017 Alexander Batischev
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , network
                     , aeson
                     , text
                     , bytestring
                     , unordered-containers
                     , containers
                     , search-algorithms
  default-language:    Haskell2010

executable server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , server
                     , bytestring
                     , aeson
  default-language:    Haskell2010

test-suite server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Minoru/server
